# Copyright (c) 2015 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

action_foreach("pickup_dll") {
  script = "//extensions/scripts/pickup_dll.py"
  sources = [
    "$root_build_dir/enhanced_photography.dll",
    "$root_build_dir/scene_perception.dll",
    "$root_build_dir/face.dll",
  ]
  inputs = [
    "//extensions/scripts/XWalkExtensionHooks_template.js",
  ]
  dist_dir = "$root_build_dir/realsense_extensions"
  outputs = [
    "$dist_dir/{{source_name_part}}/{{source_file_part}}",
    "$dist_dir/{{source_name_part}}/XWalkExtensionHooks.js",
    "$dist_dir/{{source_name_part}}",
  ]
  args = ["{{source}}", "{{output}}"]
}

group("all_extensions") {
  deps = [
    "//extensions/benchmarks/bench_image/win:bench_image",
    "//extensions/realsense/common:common_idl",
    "//extensions/realsense/common:common_utils",
    "//extensions/realsense/enhanced_photography/win:enhanced_photography",
    "//extensions/realsense/face/win:face",
    "//extensions/realsense/scene_perception/win:scene_perception",
    "//extensions/realsense/session/win:session",
  ]
}

group("dist") {
  deps = [
    ":all_extensions",
    ":pickup_dll",
  ]
}

group("sample_app") {
  deps = [
    ":dist",
    "//extensions/sample:package_sample_app",
  ]
}
