# Copyright (c) 2015 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("all_extensions") {
  deps = [
    "//extensions/benchmarks/bench_image/win:bench_image",
    "//extensions/realsense/common:common_idl",
    "//extensions/realsense/common:common_utils",
    "//extensions/realsense/enhanced_photography/win:enhanced_photography",
    "//extensions/realsense/face/win:face",
    "//extensions/realsense/scene_perception/win:scene_perception",
    "//extensions/realsense/session/win:session",
  ]
}

group("dist") {
  deps = [
    "//extensions/realsense/enhanced_photography/win:make_dist",
    "//extensions/realsense/face/win:make_dist",
    "//extensions/realsense/scene_perception/win:make_dist",
  ]
}

group("sample_app") {
  deps = [
    "//extensions/sample:package_sample_app",
  ]
}
