# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

action("package_sample_app") {
  dist_dir = "$root_build_dir/realsense_extensions"
  script = "package_sample.py"
  sources = [
    "//extensions/sample/src",
    "$dist_dir/enhanced_photography",
    "$dist_dir/scene_perception",
    "$dist_dir/face",
  ]
  hasRuntime = getenv("NO_RS_RUNTIME_HOOKS")
  v = read_file("../VERSION", "scope")
  version = v.MAJOR + "." + v.RSSDK + "." + v.MINOR
  app_version = "$version" + ".0"
  package = "org.xwalk.rs_sample"
  bundle_file = "$root_build_dir/$package" + "_with_rssdk_runtime" + "-$app_version.exe"
  outputs = [
    "$root_build_dir/$package-$app_version.msi",
    "$bundle_file"
  ]
  if (hasRuntime == "1" || hasRuntime == "true") {
    outputs -= ["$bundle_file"]
  }

  # Set the "windows" as default platform.
  platform = "windows"
  if (is_win) {
    platform = "windows"
  } else if (is_android) {
    platform = "android"
  }
  args = ["-e", rebase_path("$dist_dir"),
          "-w", rebase_path("//extensions/sample/src"),
          "-o", rebase_path("$root_build_dir/sample_app"),
          "-p", "$platform",
          "-v", "$version",
         ]
}
