# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//extensions/sample/package_rs_app.gni")

v = read_file("../VERSION", "scope")
rs_version = v.MAJOR + "." + v.RSSDK + "." + v.MINOR

package_rs_app("package_sample") {
   src_dir = rebase_path("//extensions/sample/src")
   pkg_name = "org.xwalk.rs_sample"
   version = rs_version
}

package_rs_app("package_sample_polymer") {
   src_dir = rebase_path("//extensions/sample/src_polymer")
   pkg_name = "org.xwalk.rs_sample_polymer"
   version = rs_version
}
