# Copyright (c) 2015 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("rssdk_config") {
  rssdk_dir = getenv("RSSDK_DIR")
  include_dirs = [ "$rssdk_dir/include" ]

  rssdk_arch = "$target_cpu"
  if (target_cpu == "x86") {
    rssdk_arch = "Win32"
  }

  lib_dirs = [
    "$rssdk_dir/lib/$rssdk_arch",
  ]

  libs = [
    "advapi32.lib",
  ]

  if (is_debug) {
    libs += [
      "libpxc_d.lib",
    ]
  } else {
    libs += [
      "libpxc.lib",
    ]
  }
}
