# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//xwalk/common/xwalk_common.gni")

xwalk_idlgen("common_idl") {
  namespace = "realsense::jsapi"
  sources = [
    "common.idl",
  ]
}
