# Copyright (c) 2015 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//xwalk/common/xwalk_common.gni")

xwalk_idlgen("enhanced_photography_idl") {
  namespace = "realsense::jsapi"
  sources = [
    "depth_mask.idl",
    "depth_photo.idl",
    "depth_refocus.idl",
    "measurement.idl",
    "motion_effect.idl",
    "paster.idl",
    "photo_capture.idl",
    "photo_utils.idl",
    "segmentation.idl",
    "xdm_utils.idl",
  ]
}

xwalk_js2c("enhanced_photography_js") {
  sources = [
    "../js/enhanced_photography_api.js",
  ]
}

shared_library("enhanced_photography") {
  sources = [
    "common_utils.cc",
    "common_utils.h",
    "depth_mask_object.cc",
    "depth_mask_object.h",
    "depth_photo_object.cc",
    "depth_photo_object.h",
    "depth_refocus_object.cc",
    "depth_refocus_object.h",
    "enhanced_photography_extension.cc",
    "enhanced_photography_extension.h",
    "enhanced_photography_instance.cc",
    "enhanced_photography_instance.h",
    "measurement_object.cc",
    "measurement_object.h",
    "motion_effect_object.cc",
    "motion_effect_object.h",
    "paster_object.cc",
    "paster_object.h",
    "photo_capture_object.cc",
    "photo_capture_object.h",
    "photo_utils_object.cc",
    "photo_utils_object.h",
    "segmentation_object.cc",
    "segmentation_object.h",
    "xdm_utils_object.cc",
    "xdm_utils_object.h",
  ]
  deps = [
    "../../common:common_idl",
    ":enhanced_photography_idl",
    ":enhanced_photography_js",
    "//extensions/third_party/libpxc",
    "//xwalk/common:common_static",
  ]
  include_dirs = [
    "../../..",
    "$target_gen_dir",
  ]
}
