# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//xwalk/common/xwalk_common.gni")

xwalk_idlgen("face_module_idl") {
  namespace = "realsense::jsapi"
  sources = [ "face_module.idl" ]
}

xwalk_js2c("face_js") {
  sources = [ "../js/face_api.js" ]
}

shared_library("face") {
  sources = [
    "face_extension.cc",
    "face_extension.h",
    "face_instance.cc",
    "face_instance.h",
    "face_module_object.cc",
    "face_module_object.h",
  ]
  deps = [
    ":face_module_idl",
    ":face_js",
    "//extensions/third_party/libpxc",
    "//xwalk/common:common_static",
  ]
  include_dirs = [
    "../../..",
    "$target_gen_dir",
  ]
}
